[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/rat.png" type="Texture" id=1]
[ext_resource path="res://scripts/rat.gd" type="Script" id=2]
[ext_resource path="res://assets/images/poisonCircle.png" type="Texture" id=3]
[ext_resource path="res://assets/images/bolha doen√ßa.png" type="Texture" id=4]
[ext_resource path="res://assets/sfx/bonk-sound-effect-36055.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 46.5, 24 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 2 ]
}

[sub_resource type="AudioStreamRandomPitch" id=6]
audio_stream = ExtResource( 5 )

[node name="KinematicBody2D" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9, -10 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.5, 4 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Damageflicker" type="Timer" parent="."]

[node name="poisonTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/walk = SubResource( 3 )

[node name="shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.317647 )
show_behind_parent = true
position = Vector2( -7, 22 )
scale = Vector2( 2.53125, 0.8125 )
texture = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.372549 )
show_behind_parent = true
amount = 5
randomness = 0.5
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 50, 1 )
gravity = Vector2( 0, -98 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Damageflicker" to="." method="_on_Damageflicker_timeout"]
[connection signal="timeout" from="poisonTimer" to="." method="_on_poisonTimer_timeout"]
